--- a/bouwen/styles.css
+++ b/bouwen/styles.css
@@ -20,19 +20,16 @@ body {
   line-height: 1.4;
   max-width: 1200px;
   width: 100%;
-  /* Remove: border-spacing: 20px; */
   display: flex;
   justify-content: center;
 }
 
 .signature table {
-  /* Remove: border-spacing: 20px; */
   border-collapse: collapse;
   width: auto;
 }
 
 .signature td {
-  /* Change: padding: 20; to padding: 0; */
   padding: 0;
   vertical-align: middle;
 }
@@ -65,6 +62,7 @@ body {
   display: block;
   object-fit: contain;
   margin: 0 auto;
+  margin-right: 20px;
 }
 
 .content-cell {
