--- a/bouwen/styles.css
+++ b/bouwen/styles.css
@@ -246,13 +246,13 @@ body {
 }
 
 .dropdown-arrow {
-  width: 40px;
-  height: 40px;
+  width: 80px;
+  height: 80px;
   transition: transform 0.3s ease;
 }
 
 .dropdown-arrow.flipped {
-  transform: scaleY(-1);
+  transform: scaleX(-1);
 }
 
 .dropdown-content {
@@ -263,7 +263,7 @@ body {
   min-width: 200px;
   box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
   z-index: 1;
-  border: 2px solid #063B40;
+  /* border: 2px solid #063B40; */
   border-radius: 4px;
   margin-top: 10px;
 }
