--- a/bouwen/styles.css
+++ b/bouwen/styles.css
@@ -220,7 +220,7 @@ body {
   background-color: #F7ECD6;
   z-index: 1000;
   padding: 15px 0;
-  box-shadow: 0 2px 5px rgba(0, 0, 0, 0.05);
+  /* box-shadow: 0 2px 5px rgba(0, 0, 0, 0.05); */
 }
 
 /* Dropdown in navbar */
@@ -246,8 +246,8 @@ body {
 }
 
 .dropdown-arrow {
-  width: 80px;
-  height: 80px;
+  width: 120px;
+  height: 120px;
   transition: transform 0.3s ease;
 }
 
@@ -261,7 +261,7 @@ body {
   right: 0;
   background-color: #F7ECD6;
   min-width: 200px;
-  box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
+  /* box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2); */
   z-index: 1;
   /* border: 2px solid #063B40; */
   border-radius: 4px;
@@ -273,7 +273,7 @@ body {
   padding: 12px 16px;
   text-decoration: none;
   display: block;
-  font-size: 18px;
+  font-size: 36px;
   font-family: 'Times New Roman', times, serif;
 }
 
