--- a/bouwen/styles.css
+++ b/bouwen/styles.css
@@ -278,7 +278,8 @@ body {
 }
 
 .dropdown-content a:hover {
-  background-color: rgba(6, 59, 64, 0.1);
+  /* background-color: rgba(6, 59, 64, 0.1); */
+  opacity: 0.7;
 }
 
 .dropdown-content.show {
