--- a/bouwen/styles.css
+++ b/bouwen/styles.css
@@ -89,6 +89,15 @@ body {
   text-align: center;
 }
 
+.contact-title {
+  font-size: 26px;
+  font-weight: 500;
+  color: #063B40;
+  margin: 0 0 10px 0;
+  line-height: 1.2;
+  text-align: center;
+}
+
 .profession {
   font-size: 22px;
   color: #555;
