--- a/bouwen/styles.css
+++ b/bouwen/styles.css
@@ -130,6 +130,13 @@ body {
   text-decoration: underline;
 }
 
+.contact-icon {
+  width: 140px;
+  height: auto;
+  border-radius: 50%;
+  margin-bottom: 20px;
+}
+
 /* Tablet */
 @media screen and (max-width: 900px) {
   .content-table {
