--- a/bouwen/styles.css
+++ b/bouwen/styles.css
@@ -311,7 +311,7 @@ body {
 
 .dropdown-content a {
   color: #063B40;
-  border: 1px solid rgba(6, 59, 64, 0.2);
+  /* border: 1px solid rgba(6, 59, 64, 0.2); */
   padding: 12px 16px;
   text-decoration: none;
   display: block;
