--- a/bouwen/styles.css
+++ b/bouwen/styles.css
@@ -297,13 +297,13 @@ body {
   position: absolute;
   right: 0;
   /* background-color: #F7ECD6; */
-  background-color: rgba(247, 236, 214, 0.95);
-  min-width: 200px;
+  background-color: rgba(247, 236, 214, 0.284);
+  min-width: 90px;
   backdrop-filter: blur(4px);               /* optional, looks elegant */
   /* box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2); */
   z-index: 1;
   /* border: 2px solid #063B40; */
-  border-radius: 4px;
+  border-radius: 10px;
   margin-top: 10px;
   align-items: right;
   text-align: right;
@@ -463,6 +463,10 @@ body {
   .dropdown-arrow {
     width: 70px;
     height: 70px;
+  }
+
+  .dropdown-content a {
+    font-size: 16px;
   }
 }
 
