--- a/bouwen/styles.css
+++ b/bouwen/styles.css
@@ -299,7 +299,7 @@ body {
   /* background-color: #F7ECD6; */
   background-color: rgba(247, 236, 214, 0.284);
   min-width: 90px;
-  backdrop-filter: blur(4px);               /* optional, looks elegant */
+  /* backdrop-filter: blur(4px);               optional, looks elegant */
   /* box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2); */
   z-index: 1;
   /* border: 2px solid #063B40; */
@@ -471,8 +471,8 @@ body {
 }
 
 .cf-turnstile {
-  border: 2px solid #063B40;
-  border-radius: 8px;
+  /* border: 2px solid #063B40; */
+  /* border-radius: 8px; */
   padding: 10px;
   background-color:  #F7ECD6;
 }
