--- a/bouwen/styles.css
+++ b/bouwen/styles.css
@@ -278,9 +278,9 @@ body {
   justify-content: center;
 }
 
-.dropdown-button:hover {
+/* .dropdown-button:hover {
   opacity: 0.85;
-}
+} */
 
 .dropdown-arrow {
   width: 120px;
@@ -319,10 +319,10 @@ body {
   font-family: 'Times New Roman', times, serif;
 }
 
-.dropdown-content a:hover {
+/* .dropdown-content a:hover {
   /* background-color: rgba(6, 59, 64, 0.1); */
-  opacity: 0.7;
-}
+  /* opacity: 0.7;
+} */
 
 .dropdown-content.show {
   display: block;
