--- a/bouwen/styles.css
+++ b/bouwen/styles.css
@@ -253,7 +253,7 @@ body {
   left: 0;
   right: 0;
   width: 100%;
-  background-color: #F7ECD6;
+  background-color: #f7ecd600;
   z-index: 1000;
   padding: 15px 0;
   /* box-shadow: 0 2px 5px rgba(0, 0, 0, 0.05); */
