--- a/bouwen/styles.css
+++ b/bouwen/styles.css
@@ -136,7 +136,7 @@ body {
   border-radius: 50%;
   margin-bottom: 10px;
   align-items: center;
-  box-shadow: 3px 3px 8px rgba(0, 0, 0, 0.2);  /* Shadow to the right and down */
+  filter: drop-shadow(3px 3px 6px rgba(0, 0, 0, 0.2));  /* Round shadow that follows the SVG shape */
 }
 
 /* Tablet */
@@ -277,7 +277,6 @@ body {
   align-items: right;
   text-align: right;
   justify-content: center;
-  box-shadow: 3px 3px 8px rgba(0, 0, 0, 0.2);  /* Shadow to the right and down */
 }
 
 /* .dropdown-button:hover {
@@ -288,6 +287,7 @@ body {
   width: 120px;
   height: 120px;
   transition: transform 0.3s ease;
+  filter: drop-shadow(3px 3px 6px rgba(0, 0, 0, 0.2));  /* Round shadow that follows the SVG shape */
 }
 
 .dropdown-arrow.flipped {
